--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,44 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+  font-family:  Helvetica,Arial, sans-serif;
+}
+img{
+  max-width: 100%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+  padding: 60px;
+}
+input{
+  color: gray;
+  font-size: 1.2rem;
+  width: 100%;
+}
+.card-grid{
+  text-align: center;
+  justify-items: auto;
+  
+}
+.contenedor{
+  width: 220px;
+  height: 200px;
+}
+
+.card {
+  align-content: center;
+  border: 2.5px solid grey;
+  border-radius: 6px;
+  overflow: hidden;
+  margin-bottom: 10px;
+  margin-right: 10px;
+  background-color: darkgoldenrod;
+}
+
+.card p{
+  text-align: center;
+  font-family: 'Lucida Sans','sans-serif';
+  
+}
+
+.card img{
+  max-width: 180px;
 }
